@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19950904
+MANIFEST for ded, version t19950905
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
